<menu xmlns:android="http://schemas.android.com/apk/res/android" >
	<item android:id="@+id/calendar_action"
	      android:title = "@string/calendar_action"
	      android:showAsAction ="ifRoom|withText" />
	<item android:id="@+id/planner_action"
	      android:title="@string/planner_action"
	      android:showAsAction="ifRoom|withText" /> 
 	<item 
        android:id="@+id/course_action"
        android:showAsAction="ifRoom|withText"
        android:title="@string/course_label"/>
	<item 
	    android:id="@+id/gradebook_action"
	    android:showAsAction="ifRoom|withText"
	    android:title="@string/gradebooks"/> 	
    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_settings"/>

</menu>