<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item
        android:id="@+id/calendar_action"
        android:showAsAction="ifRoom|withText"
        android:title="@string/calendar_action"/>
    <item
        android:id="@+id/assignment_action"
        android:showAsAction="ifRoom|withText"
        android:title="@string/assignment_action"/>
    <item 
        android:id="@+id/course_action"
        android:showAsAction="ifRoom|withText"
        android:title="@string/course_label"/> 
   	<item 
	    android:id="@+id/gradebook_action"
	    android:showAsAction="ifRoom|withText"
	    android:title="@string/gradebooks"/>    
    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_settings"/>

</menu>