<ScrollView xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

<LinearLayout     
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AddCourses" 
    android:orientation="vertical" >
    
    <EditText 
        android:id="@+id/coursename"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/instructor_name"/>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height= "wrap_content"
        android:orientation="horizontal" >
        
        <Button
            android:id="@+id/course_sdate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            style="?android:attr/buttonBarButtonStyle"
            android:hint="@string/course_sdate"
            android:onClick="setSDate" />
        <Button
        	android:id="@+id/course_edate"
        	android:layout_width="0dp"
        	android:layout_height="wrap_content"
        	android:layout_weight="1"
        	android:background="@null"
            style="?android:attr/buttonBarButtonStyle"        	
        	android:hint="@string/course_edate"
        	android:onClick="setEDate" />
        </LinearLayout>
        
	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height= "wrap_content"
        android:orientation="horizontal" >
        
	    <EditText 
	        android:id="@+id/course_building"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:hint="@string/course_building"/>
	    <EditText
	        android:id="@+id/course_room"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:hint="@string/course_room" />
	    </LinearLayout>
 
	<Button
	    android:id="@+id/course_instructor"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:background="@null"
	    android:gravity="left|center"
	    android:hint="@string/instructor_button"
	    android:drawableRight="@drawable/next_month" 
	    android:onClick="selectInstructor"/>
	
	<EditText
	    android:id="@+id/course_time"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:hint="@string/course_time" />
	<EditText 
	    android:id="@+id/course_notes"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:hint="@string/notes" />
		    
    	<TextView
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:paddingTop="10dp"
	        android:text="@string/course_gradebook"
	    	android:textAppearance="?android:attr/textAppearanceLarge" />
	    		
	<LinearLayout
	    android:id="@+id/gradebook_layout"
        android:layout_width="match_parent"
        android:layout_height= "wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"  
        android:paddingTop="@dimen/activity_vertical_margin"        
        android:orientation="vertical" >
	    
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height= "wrap_content"
	        android:orientation="horizontal" >
	        
	        <TextView
	    		android:layout_width="0dp"
	    		android:layout_height="wrap_content"
	    		android:layout_weight="1"
	    		android:text="@string/grade_type" />
	    	<Spinner
	    	    android:id="@+id/grade_type" 
   	            android:layout_width="0dp"
        		android:layout_height="wrap_content"
        		android:layout_weight="2"/>
	    	
	    	</LinearLayout>

	    <Button
	        android:id="@+id/add_parameters_button"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:drawableLeft="@drawable/add_button"
	        android:onClick="addParameters"
	        android:text="@string/addParameters" />
	    
	    </LinearLayout>


</LinearLayout>
</ScrollView>