<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" >
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:paddingTop="5dp"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/instructor_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/instructor_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/instructor_dept"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/instructor_dept"
        android:ems="10" />

<LinearLayout 
	android:layout_width="match_parent"
    android:layout_height="wrap_content" 
    android:orientation="horizontal" >
        
    <TextView
        android:id="@+id/instructor_email_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:paddingRight="10dp"
        android:text="@string/instructor_email" />
          
    <EditText
        android:id="@+id/instructor_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight= "1"
        android:ems="10"
        android:hint="@string/add_new"
        android:inputType="textEmailAddress" />

</LinearLayout>

<LinearLayout 
	android:layout_width="match_parent"
    android:layout_height="wrap_content" 
    android:orientation="horizontal" >
    
    <TextView
        android:id="@+id/instructor_webpage_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:paddingRight="10dp"        
        android:text="@string/instructor_webpage" />
        
    <EditText
        android:id="@+id/instructor_webpage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/add_new"
        android:ems="10" />

</LinearLayout>

<LinearLayout 
	android:layout_width="match_parent"
    android:layout_height="wrap_content" 
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/instructor_phone_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:paddingRight="10dp"                
        android:text="@string/instructor_phone" />
    
    <EditText
        android:id="@+id/instructor_phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:hint = "@string/add_new"
        android:inputType="phone" />
    
</LinearLayout>
    
<LinearLayout 
	android:layout_width="match_parent"
    android:layout_height="wrap_content" 
    android:orientation="horizontal" >

	<TextView
        android:id="@+id/instructor_office_hours_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:paddingRight="10dp"
        android:text="@string/instructor_office_hours" />  
        
    <EditText
        android:id="@+id/instructor_office_hours"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/add_new"
        android:inputType="textMultiLine" />
    
</LinearLayout> 

    <EditText
        android:id="@+id/instructor_notes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/notes"
        android:inputType="textMultiLine" />

</LinearLayout>
</ScrollView>